# $Id$

2007-04-04	Konstantin V. Arkhipov

	* meta/: syntax checking now off by default, use --syntax-check to
	enable it.

2007-04-03	Konstantin V. Arkhipov

	* meta/types/PasswordType.class.php: bye.

	* meta/: LazyOneToOne relation dropped, you can use
	'relation="OneToOne" fetch="lazy"' instead.

	* meta/: read-only includes implemented via 'build="false"' option.

	* meta/: --dry-run mode added.

2007-04-02	Konstantin V. Arkhipov

	* meta/internal.xml: new internal classes added - IdentifiableObject,
	NamedObject, IndetifiableTree, NamedTree.

2007-04-01	Konstantin V. Arkhipov

	* meta/: internal classes implementation finished.

	* meta/classes/MetaConfiguration.class.php: spooked class type is
	obsoleted now, do not specify it manually anymore, it will be set for
	spooked patterns automagically.

2007-03-30	Konstantin V. Arkhipov

	* core/Form/Primitives/BasePrimitive.class.php: isImported added.

	* core/Form/PlainForm.class.php,
	core/Form/Primitives/BasePrimitive.class.php: getSafeValue added.

2007-03-26	Konstantin V. Arkhipov

	* meta/types/: ranges support dropped.

	* main/Base/DateRange.class.php: split() ported to Date's usage.

	* test/core/DateRangeTest.class.php: more tests.

2007-03-25	Konstantin V. Arkhipov

	* main/Criteria/PropertyPath.class.php: useful utilities for path
	processing.

	* main/Criteria/Property.class.php: unused anyway, removed.

2007-03-23	Konstantin V. Arkhipov

	* main/DAOs/, meta/: mapping is now proto-based.

2007-03-22	Dmitry E. Demidov

	* main/Flow/PrototypedEditor.class.php: added method doTake.

2007-03-20	Dmitry E. Demidov

	* main/Flow/PrototypedEditor.class.php: added method dropObject,
	added form state checking after calling addObject/saveObject to 
	doSave/doAdd methods.

	* main/Flow/MethodMappedController.class.php: added method
	dropMethodMapping.

2007-03-20	Konstantin V. Arkhipov

	* main/UnifiedContainer/UnifiedContainer.class.php: fetched
	collection now excluded from serialization.
