@@ -1,5 +1,10 @@
 # $Id$
 
+2007-04-06	Ivan Y. Khvostishkov
+
+	* main/Base/RequestType.class.php: added ability to import data from
+	attached vars.
+
 2007-04-04	Konstantin V. Arkhipov
 
 	* meta/: syntax checking now off by default, use --syntax-check to
